Updating to new nextjs release, base 7

--- a/src/app/custom.css
+++ b/src/app/custom.css
@@ -1,23 +1,30 @@
 main > *:not(:first-child) {
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-}
-
-main > *:not(:first-child) {
     padding-top: 5rem;
     padding-bottom: 5rem;
 }
 
+main footer {
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
 main > .custom-height:first-child {
-    height: 65vh;
+    min-height: 65vh;
+    max-height: 100vh;
 }
 
 main #links {
-    text-align: center;
+    /* text-align: center; */
 }
 
 main #landing .name {
     font-size: 4vw;
+}
+
+main #landing .name::after {
+    width: 1rem;
+    height: 1rem;
+    background-color: pink;
 }
 
 @media only screen and (max-width: 1190px) {
@@ -29,4 +36,9 @@ main #landing .name {
 /* Image */
 .block-wrapper header img {
     transform: translateY(-20%);
+}
+
+/* Toolkit */
+main .no-icon {
+    font-size: 1.5rem;
 }
