--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,7 +27,7 @@
 	rgb(var(--background-start-rgb));
 } */
 
-nav, footer {
+nav {
 	color: #fff;
 	mix-blend-mode: difference;
 }
@@ -40,6 +40,16 @@ body {
 	transition: opacity 450ms ease-in-out 1 elementAppears;
 }
 
+/* Headers */
+main h1 .greeting,
+main h1 .name {
+    font-size: 1000;
+}
+
+main h2 {
+    font-weight: 600;
+}
+
 @keyframes elementAppears {
 	0% {
 		opacity: 0;
@@ -49,4 +59,27 @@ body {
 		opacity: 1;
 		top: 0;
 	}
+}
+
+/* animations & effects */
+nav a:hover, footer a:hover, ul li > a:hover,
+nav a:active, footer a:active, ul li > a:active {
+	background-color: #fff;
+	color: #000;
+}
+
+nav a,
+ul li > a,
+footer a {
+	transition: background-color 250ms ease-in-out, color 250ms ease-in-out;
+}
+
+.block-item {
+	transition:
+		box-shadow 250ms ease-in-out,
+		border-radius 250ms ease-in-out;
+}
+
+.block-item:hover {
+	box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
