--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -13,18 +13,8 @@ main > .custom-height:first-child {
     max-height: 100vh;
 }
 
-main #links {
-    /* text-align: center; */
-}
-
 main #landing .name {
     font-size: 4vw;
-}
-
-main #landing .name::after {
-    width: 1rem;
-    height: 1rem;
-    background-color: pink;
 }
 
 @media only screen and (max-width: 1190px) {
@@ -33,9 +23,19 @@ main #landing .name::after {
     }
 }
 
-/* Image */
-.block-wrapper header img {
-    transform: translateY(-20%);
+.narrow-screen-menu {
+    /* width: 100%; */
+}
+
+/* Block Image */
+.block-wrapper header .image-wrapper > div {
+    /* transform: translateY(-20%); */
+}
+
+.block-wrapper header .image-wrapper div > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 /* Toolkit */
