--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "../styles/effects.css";
 @import "../styles/custom.css";
 @import "../styles/blog.css";
 
@@ -45,10 +46,6 @@ body {
 	background-color: #fff;
 }
 
-.narrow-menu {
-	transition: opacity 450ms ease-in-out 1 elementAppears;
-}
-
 /* Headers */
 main h1 .greeting,
 main h1 .name {
@@ -59,37 +56,6 @@ main h2, article h1 {
     font-weight: 600;
 }
 
-@keyframes elementAppears {
-	0% {
-		opacity: 0;
-		top: -3rem;
-	}
-	100% {
-		opacity: 1;
-		top: 0;
-	}
-}
-
-/* animations & effects */
-nav a:hover, nav button:hover, footer a:hover, ul li > a:hover,
-nav a:active, nav button:active, footer a:active, ul li > a:active {
-	background-color: #fff;
-	color: #000;
-}
-
-nav a,
-nav button,
-ul li > a,
-footer a {
-	transition: background-color 250ms ease-in-out, color 250ms ease-in-out;
-}
-
-.block-item {
-	transition:
-		box-shadow 250ms ease-in-out,
-		border-radius 250ms ease-in-out;
-}
-
-.block-item:hover {
-	box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+p > a {
+	text-decoration: underline;
 }
