--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -14,11 +14,28 @@ main article h2 {
 }
 
 main article h3 {
-    font-size: 1rem;
+    font-size: 1.25rem;
+    font-weight: 600;
 }
 
-main article code {
-    color: rgb(62, 122, 124);
+main article p code,
+main article ul code,
+main article li code,
+main article h2 code,
+main article h3 code {
+    padding: 0.2em 0.3em;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+}
+
+main article pre {
+    margin: 0.5em 0;
+    border: 3px solid #000;
+    padding: 0.5em;
+    overflow-x: scroll;
+}
+
+main article pre code {
     font-weight: 800;
 }
 
@@ -26,7 +43,12 @@ main article p > a {
     text-decoration-line: underline;
 }
 
-main article p > a:hover,
-main article p > a:active {
-    color: rgb(62, 122, 124);
+main article > ul {
+    margin: 0.25 0;
+    list-style:disc;
+    padding-left: 1rem;
+}
+
+main article > ul li {
+    margin: 0.3em 0;
 }
