--- a/src/styles/components/DynamicListWrapper.css
+++ b/src/styles/components/DynamicListWrapper.css
@@ -19,24 +19,26 @@
 }
 
 /* Animations */
-#dynamic-list-wrapper .control-button {
-    /* transition: height 300ms ease; */
-    animation: appear 1000ms ease;
+#dynamic-list-wrapper > div {
+    transition: 300ms ease;
 }
 
-#dynamic-list-wrapper .animate-height {
-    animation: heightChange 500ms ease;
+#dynamic-list-wrapper .appear {
+    animation: appear 500ms ease;
 }
 
-#dynamic-list-wrapper > #extend-button-container {
-    border-top: dotted 2px #000;
+#dynamic-list-wrapper .disappear {
+    animation: appear 500ms disappear;
 }
 
 #dynamic-list-wrapper #extend-button-container > button {
-    top: -1.4em;
-    background-color: #fff;
-    padding-left: 1.5em;
-    padding-right: 1.5em;
+    top: -1em;
+    background-color: #000;
+    color: #fff;
+    font-size: 0.9rem;
+    font-weight: bold;
+    padding: 0.25em 1.6em;
+    border-radius: 0.25rem;
 }
 
 @keyframes heightChange {
@@ -48,4 +50,9 @@
 @keyframes appear {
     0% { background-color: #fff; }
     100% { background-color: #000; }
+}
+
+@keyframes disappear {
+    0% { background-color: #000; }
+    100% { background-color: #fff; }
 }
