--- a/src/styles/specific/landing.css
+++ b/src/styles/specific/landing.css
@@ -1,11 +1,16 @@
-#landing {
+.full-height {
+    height: 100vh;
+}
+
+.min-height {
     height: 80vh;
-    animation-delay: 1.5s;
-    animation: fullScreenTo70 3000ms ease;
+}
+
+.animate {
+    animation: fullScreenTo70 1500ms ease;
 }
 
 @keyframes fullScreenTo70 {
     0% { height: 100vh; }
-    60% { height: 100vh; }
     100% { height: 80vh; }
 }
