--- a/src/styles/components/DynamicListWrapper.css
+++ b/src/styles/components/DynamicListWrapper.css
@@ -24,11 +24,11 @@
 }
 
 #dynamic-list-wrapper .appear {
-    animation: appear 500ms ease;
+    animation: appear 400ms ease;
 }
 
 #dynamic-list-wrapper .disappear {
-    animation: appear 500ms disappear;
+    animation: disappear 400ms ease;
 }
 
 #dynamic-list-wrapper #extend-button-container > button {
@@ -41,18 +41,12 @@
     border-radius: 0.25rem;
 }
 
-@keyframes heightChange {
-    0% { max-height: 0; }
-    50% { max-height: 40%; }
-    100% { max-height: 100%; }
-}
-
 @keyframes appear {
-    0% { background-color: #fff; }
-    100% { background-color: #000; }
+    0% { opacity: 0; }
+    100% { opacity: 1; }
 }
 
 @keyframes disappear {
-    0% { background-color: #000; }
-    100% { background-color: #fff; }
+    0% { opacity: 1 }
+    100% { opacity: 0 }
 }
