--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,29 @@
 	rgb(var(--background-start-rgb));
 } */
 
+.accessability-element {
+	padding: 0.5em;
+	color: #000;
+	background-color: #fff;
+	font-weight: bold;
+	border-radius: 0.25em;
+}
+
+.skip-link {
+	position: absolute;
+	top: -5em;
+	left: 2em;
+	z-index: 999;
+	opacity: 0;
+	transition: opacity 350ms ease;
+}
+
+.skip-link:focus,
+.skip-link:active {
+    top: 2em;
+    opacity: 1;
+}
+
 nav {
 	z-index: 99;
 	color: #fff;
@@ -35,7 +58,6 @@ nav {
 }
 
 nav button {
-	padding: 0.3em;
 	height: 2.5rem;
 	width: 2.5rem;
 }
