--- a/src/styles/components/generic.css
+++ b/src/styles/components/generic.css
@@ -6,6 +6,14 @@ main > div {
 	contain: layout;
 }
 
+main > div .flex {
+	column-gap: 3em;
+}
+
+main > div > .flex {
+	flex: 1;
+}
+
 .section h3 {
 	width: 100%;
 }
